--- a/Jal.RestClient.Installer/Jal.RestClient.Installer.csproj
+++ b/Jal.RestClient.Installer/Jal.RestClient.Installer.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenAutenticatorInstaller.cs" />
     <Compile Include="RestClientInstaller.cs" />
   </ItemGroup>
   <ItemGroup>
