--- a/Jal.RestClient/packages.config
+++ b/Jal.RestClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Jal.Converter" version="1.1.0.0" targetFramework="net40" />
-  <package id="Jal.HttpClient" version="1.0.0.0" targetFramework="net40" />
+  <package id="Jal.Converter" version="1.1.1.0" targetFramework="net45" />
+  <package id="Jal.HttpClient" version="1.1.0.0" targetFramework="net45" />
   <package id="Jal.Locator" version="1.0.0.0" targetFramework="net40" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
