--- a/Jal.RestClient.Installer/packages.config
+++ b/Jal.RestClient.Installer/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="Jal.Converter" version="1.1.1.0" targetFramework="net45" />
+  <package id="Jal.HttpClient" version="1.1.0.0" targetFramework="net45" />
+  <package id="Jal.Locator" version="1.0.0.0" targetFramework="net45" />
 </packages>
