--- a/Jal.RestClient/Jal.RestClient.csproj
+++ b/Jal.RestClient/Jal.RestClient.csproj
@@ -33,16 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jal.Converter, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Jal.HttpClient, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.Converter.1.1.1.0\lib\net40\Jal.Converter.dll</HintPath>
-    </Reference>
-    <Reference Include="Jal.HttpClient, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.HttpClient.1.1.0.0\lib\net45\Jal.HttpClient.dll</HintPath>
-    </Reference>
-    <Reference Include="Jal.Locator">
-      <HintPath>..\packages\Jal.Locator.1.0.0.0\lib\net40\Jal.Locator.dll</HintPath>
+      <HintPath>..\packages\Jal.HttpClient.1.3.0.0\lib\net45\Jal.HttpClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fluent\RestHandlerDescriptorExtensions.cs" />
+    <Compile Include="Fluent\RestHandlerDescriptor.cs" />
+    <Compile Include="Interface\IAuthenticatorDescriptor.cs" />
+    <Compile Include="Interface\IContentDescriptor.cs" />
+    <Compile Include="Interface\ISenderDescriptor.cs" />
+    <Compile Include="Interface\IRestHandlerBuilder.cs" />
+    <Compile Include="Impl\RestHandlerBuilder.cs" />
     <Compile Include="Impl\BasicHttpAuthenticator.cs" />
     <Compile Include="Impl\RestHandlerAsync.cs" />
     <Compile Include="Impl\RestHandler.cs" />
