--- a/Jal.RestClient/Jal.RestClient.csproj
+++ b/Jal.RestClient/Jal.RestClient.csproj
@@ -33,9 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jal.HttpClient, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Jal.HttpClient, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.HttpClient.1.3.0.0\lib\net45\Jal.HttpClient.dll</HintPath>
+      <HintPath>..\packages\Jal.HttpClient.1.3.1.0\lib\net45\Jal.HttpClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,6 +49,7 @@
     <Compile Include="Fluent\RestHandlerDescriptorExtensions.cs" />
     <Compile Include="Fluent\RestHandlerDescriptor.cs" />
     <Compile Include="Interface\IAuthenticatorDescriptor.cs" />
+    <Compile Include="Interface\IAcceptedTypeDescriptor.cs" />
     <Compile Include="Interface\IContentDescriptor.cs" />
     <Compile Include="Interface\ISenderDescriptor.cs" />
     <Compile Include="Interface\IRestHandlerBuilder.cs" />
