--- a/Jal.RestClient.Tests/Jal.RestClient.Tests.csproj
+++ b/Jal.RestClient.Tests/Jal.RestClient.Tests.csproj
@@ -45,29 +45,31 @@
       <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Jal.AssemblyFinder">
-      <HintPath>..\packages\Jal.AssemblyFinder.1.1.0.0\lib\net40\Jal.AssemblyFinder.dll</HintPath>
+      <HintPath>..\packages\Jal.AssemblyFinder.1.1.1.0\lib\net40\Jal.AssemblyFinder.dll</HintPath>
     </Reference>
-    <Reference Include="Jal.Converter, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Jal.Converter, Version=1.1.6.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.Converter.1.1.1.0\lib\net40\Jal.Converter.dll</HintPath>
+      <HintPath>..\packages\Jal.Converter.1.1.6.0\lib\net40\Jal.Converter.dll</HintPath>
     </Reference>
-    <Reference Include="Jal.Converter.Installer">
-      <HintPath>..\packages\Jal.Converter.Installer.1.1.1.0\lib\net40\Jal.Converter.Installer.dll</HintPath>
-    </Reference>
-    <Reference Include="Jal.HttpClient, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Jal.Converter.Installer, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.HttpClient.1.3.1.0\lib\net45\Jal.HttpClient.dll</HintPath>
+      <HintPath>..\packages\Jal.Converter.Installer.1.1.4.0\lib\net40\Jal.Converter.Installer.dll</HintPath>
+    </Reference>
+    <Reference Include="Jal.HttpClient, Version=1.3.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Jal.HttpClient.1.3.6.0\lib\net45\Jal.HttpClient.dll</HintPath>
     </Reference>
     <Reference Include="Jal.HttpClient.Installer, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Jal.HttpClient.Installer.1.3.1.0\lib\net45\Jal.HttpClient.Installer.dll</HintPath>
     </Reference>
-    <Reference Include="Jal.Locator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Jal.Locator, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Jal.Locator.1.0.0.0\lib\net40\Jal.Locator.dll</HintPath>
+      <HintPath>..\packages\Jal.Locator.1.0.5.0\lib\net40\Jal.Locator.dll</HintPath>
     </Reference>
-    <Reference Include="Jal.Locator.CastleWindsor">
-      <HintPath>..\packages\Jal.Locator.CastleWindsor.1.0.0.0\lib\net40\Jal.Locator.CastleWindsor.dll</HintPath>
+    <Reference Include="Jal.Locator.CastleWindsor, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Jal.Locator.CastleWindsor.1.0.3.0\lib\net40\Jal.Locator.CastleWindsor.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
