--- a/Jal.RestClient.Tests/packages.config
+++ b/Jal.RestClient.Tests/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="Jal.HttpClient" version="1.3.9" targetFramework="net45" />
-  <package id="Jal.HttpClient.Installer" version="1.3.2" targetFramework="net45" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Jal.HttpClient" version="2.0.1" targetFramework="net45" />
+  <package id="Jal.HttpClient.Installer" version="2.0.0" targetFramework="net45" />
+  <package id="Jal.HttpClient.Logger" version="2.0.0" targetFramework="net45" />
+  <package id="Jal.HttpClient.Logger.Installer" version="2.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="Shouldly" version="2.6.0" targetFramework="net45" />
 </packages>
