--- a/Jal.RestClient.Tests/packages.config
+++ b/Jal.RestClient.Tests/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
-  <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
-  <package id="Jal.HttpClient" version="2.0.1" targetFramework="net45" />
-  <package id="Jal.HttpClient.Installer" version="2.0.0" targetFramework="net45" />
-  <package id="Jal.HttpClient.Logger" version="2.0.0" targetFramework="net45" />
-  <package id="Jal.HttpClient.Logger.Installer" version="2.0.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="Shouldly" version="2.6.0" targetFramework="net45" />
+  <package id="Castle.Core" version="4.2.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="4.1.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
+  <package id="Jal.HttpClient" version="2.1.0" targetFramework="net45" />
+  <package id="Jal.HttpClient.Installer" version="2.1.0" targetFramework="net45" />
+  <package id="Jal.HttpClient.Logger" version="2.1.0" targetFramework="net45" />
+  <package id="Jal.HttpClient.Logger.Installer" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
+  <package id="NUnit" version="3.10.1" targetFramework="net45" />
+  <package id="Shouldly" version="3.0.0" targetFramework="net45" />
 </packages>
