--- a/Jal.RestClient.Json/Jal.RestClient.Json.csproj
+++ b/Jal.RestClient.Json/Jal.RestClient.Json.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.1</Version>
+    <Version>1.7.2</Version>
     <Company>Raul Naupari</Company>
     <Description>Json serializer/deserializer for the Jal.RestClient library</Description>
     <Copyright />
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
