--- a/Jal.RestClient.Installer/Jal.RestClient.Installer.csproj
+++ b/Jal.RestClient.Installer/Jal.RestClient.Installer.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.1</Version>
+    <Version>1.7.2</Version>
     <Company>Raul Naupari</Company>
     <Description>Castle Windsor installer for the Jal.RestClient library</Description>
     <Copyright />
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Castle.Windsor" Version="5.0.0" />
+    <PackageReference Include="Castle.Windsor" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
