--- a/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
+++ b/Jal.RestClient.LightInject.Installer/Jal.RestClient.LightInject.Installer.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.7.1</Version>
+    <Version>1.7.2</Version>
     <Company>Raul Naupari</Company>
     <Description>LightInject installer for the Jal.RestClient library</Description>
     <Copyright />
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LightInject" Version="5.4.0" />
+    <PackageReference Include="LightInject" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
